# DemonGateCodec

./: .editorconfig  CMakeLists.txt  COPYING  README.md
.github/workflows/: c-cpp.yml
documents/filterbank/: check_power_complementary_condition.py
documents/slide/: math_macros.sty  mp3slide.tex  references.bib  slide.sty
documents/slide/figs/: cos_modulated_filter_bank.drawio  filter_bank.drawio  halft_overlap_add.odg  huffman_coding_region_division.odg  mp3_encode_process.drawio  mp3_routines.py  mp3_struct.odg  plot_filter_bank_graphs.py  plot_half_overlap_add.py  plot_model_analyze_results.py  plot_partition_frequencies.py  plot_psycoacoustic_entropy.py  plot_spreading_function.py  polyphase_representation_filter_bank.drawio  quantization_power_distribution.py  window_function_transition.odg
documents/slide/figs/psyco_model/: check_psyco_model.py
libs/: CMakeLists.txt
libs/dg_decoder/: CMakeLists.txt
libs/dg_decoder/include/: dg_decoder.h
libs/dg_decoder/src/: CMakeLists.txt  dg_decoder.c  dg_huffman.c  dg_huffman.h  dg_maindata_buffer.c  dg_maindata_buffer.h
test/: CMakeLists.txt
test/dg_decoder/: CMakeLists.txt  dg_decoder_test.cpp  dg_huffman_test.cpp  dg_maindata_buffer_test.cpp
test/dg_decoder/testdata/: note.txt
tools/dg_decoder_cui/: CMakeLists.txt  dg_decoder_main.c
tools/dg_player/: CMakeLists.txt  dg_player.c  dg_player.h  dg_player_coreaudio.c  dg_player_pulseaudio.c  dg_player_wasapi.c
